Fixed layout bug for mobile deviced regarding hero banner buttons

--- a/src/css/mainStyle.css
+++ b/src/css/mainStyle.css
@@ -44,6 +44,11 @@
 
     .button-group {
       margin-top: 2rem;
+      display:flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
     }
 
     .btn-primary,
